# Shadow

./: AST.cpp  AST.h  CMakeLists.txt  Data.cpp  Data.h  Executor.cpp  Executor.h  IR.cpp  IR.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Scope.cpp  Scope.h  Symbol.cpp  Symbol.h  Token.cpp  Token.h  main.cpp  test.fye  test.sdow  test.shade  util.cpp  util.h
src/: main.cpp
src/components/: Executor.cpp  Executor.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  main.cpp
src/core/ast/: AST.cpp  AST.h
src/core/data/: Data.cpp  Data.h  Memory.cpp  Memory.h  Namespace.cpp  Namespace.h  Number.cpp  Number.h  Operations.cpp  Operations.h  Scope.cpp  Scope.h  String.cpp  String.h  Symbol.cpp  Symbol.h  Token.h
src/core/ir/: IR.cpp  IR.h
src/core/ir/nodes/: AddNode.cpp  AddNode.h  DivNode.cpp  DivNode.h  EqNode.cpp  EqNode.h  IdentNode.cpp  IdentNode.h  ModNode.cpp  ModNode.h  MulNode.cpp  MulNode.h  NumberNode.cpp  NumberNode.h  StringNode.cpp  StringNode.h  SubNode.cpp  SubNode.h  base.cpp  base.h
src/core/source/: Symbol.h  Token.cpp  Token.h
src/core/token/: Token.cpp
src/util/debug/: debug.cpp  debug.h
